--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@
 body {
   min-height: 100vh;
   background: var(--light-purple);
-
   overflow-x: hidden;
 }
 
@@ -345,9 +344,7 @@ main .subtitle {
     width: initial;
     height: 100%;
 
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-radius: 1rem 0 1rem 1rem;
     background: var(--button-bg);
 
     animation: fromTop .5s;
